--- a/style.css
+++ b/style.css
@@ -28,7 +28,20 @@ h1 {
   border-bottom: 3px solid #e63946;
 }
 
-.track {
+.img-container {
+  width: 70%;
+  margin: 10px auto;
+}
+
+img {
+  width: 300px;
+  height: 350px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: #1d3557 3px solid;
+}
+
+.highlight-text {
   color: #e63946;
   font-weight: bold;
 }
@@ -43,7 +56,7 @@ a:hover {
   color: blue;
 }
 
-.paragraph {
+p {
   margin: 5px 0;
   padding-left: 5px;
 }
